# someplace-simplistic--encryption-n1nsy1feajq6x0dfr2zn1bi6l

./: .gitignore  ChaCha20.adoc  Makefile  Makefile.am  README.adoc  README_usage.txt  arc4_common.h  arcfour  cc20.sdef  cc20_struct.h  chacha20.c  chacha20_10  configure.ac  dec2raw  dependencies.mk  enter_psw  gbcrypt2  gbcrypt2-container-unpack.patch  help-fmt.sh  help.txt  key2prand  local.mk  maintainer.mk  mdarc4.c  mdfast.c  mdrc4.c  mod256add10  mod256sub10  new_interface.txt  prng-static  psw2nbt  random-generation.txt  rc4csprng10  rc4drop3072.c  rc4dropN.c  rc4hash.c  rc4sxs-crypt.c  rc4sxs-crypt.sh  rc4sxs.c  rev10  (+17 more)
arcfour_test_vectors/: README  k3
chacha20/: Makefile.am  autogen.sh  chacha20.c  configure.ac  sdef2h
fragments/: dependencies.mk  getopt_simplest.c  getopt_simplest_mand_arg.c  lib_maintainer.mk  sources.mk
fragments/include/: dim_sdbrke8ae851uitgzm4nv3ea2.h
gbcrypt2/: Makefile  amalgamation  gbcrypt2.standalone-unpack.patch  key2prand  psw2key  raw2dec  rc4csprng10  xor10
utils/: rev_octets
wip/: byte_analysis  dependencies.mk  local.mk  maintainer.mk  mod256sub10  nonce_generation.txt  random-generation.txt  rc4s2k  rc4sxs-crypt+mac.sh  simple_algorithms.txt  targets.mk  treyfer-cfb-512.c  treyfer-hash.c  treyfer_sbox.h
wip/arcfour_test_vectors/: README
wip/fragments/: Makefile  dependencies.mk  getopt_simplest.c  getopt_simplest_perror_missing_arg.c  getopt_simplest_perror_opt.c  sources.mk
